update navbar logo link target

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav id="nav" class="navbar navbar-expand-lg py-3 navbar-dark sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand my-0 py-0" href="/about">
+        <a class="navbar-brand my-0 py-0" href="/movies">
             <img src="/icons/3.svg" alt="Logo" height="35px" class="d-inline-block align-text-center">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
